src/pydjinni/generator/objc/it/swift/error/expected/include/objc/SFTHelper.h
// AUTOGENERATED FILE - DO NOT MODIFY!
// This file was generated by PyDjinni from 'error.pydjinni'
#import <Foundation/Foundation.h>
#import "SFTAsyncThrowingCallback.h"
#import "SFTBarError.h"
#import "SFTFooError.h"
#import "SFTThrowingCallback.h"
NS_SWIFT_NAME(Helper)
@interface SFTHelper : NSObject
/// - Throws: ``SFTFooError`` when something goes wrong
/// - Throws: ``SFTBarError`` when something else goes wrong
+ (void)throwingError:(NSError* _Nullable * _Nonnull)error
  __attribute__((swift_error(nonnull_error)))
  NS_SWIFT_NAME(throwingError());
+ (void)throwingWithParameters:(NSError* _Nullable * _Nonnull)error
  __attribute__((swift_error(nonnull_error)))
  NS_SWIFT_NAME(throwingWithParameters());
+ (void)throwingAsync:(nonnull void (^)(NSError* _Nullable))completion
  __attribute__((swift_async_error(nonnull_error)))
  NS_SWIFT_NAME(throwingAsync(completion:));
+ (void)throwingAsyncWithReturnValue:(nonnull void (^)(BOOL , NSError* _Nullable))completion
  __attribute__((swift_async_error(nonnull_error)))
  NS_SWIFT_NAME(throwingAsyncWithReturnValue(completion:));
+ (void)throwingCallbackError:(nonnull id<SFTThrowingCallback>)callback error:(NSError* _Nullable * _Nonnull)error
  __attribute__((swift_error(nonnull_error)))
  NS_SWIFT_NAME(throwingCallbackError(callback:));
+ (void)throwingAsyncCallbackError:(nonnull id<SFTAsyncThrowingCallback>)callback completion:(nonnull void (^)(NSError* _Nullable))completion
  __attribute__((swift_async_error(nonnull_error)))
  NS_SWIFT_NAME(throwingAsyncCallbackError(callback:completion:));
- (void)nonstaticThrowingError:(NSError* _Nullable * _Nonnull)error
  __attribute__((swift_error(nonnull_error)))
  NS_SWIFT_NAME(nonstaticThrowingError());
@end
